fix overflow problem

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ picture {
 /* Allow percentage-based heights in the application */
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 /* Typographic tweaks! Add accessible line-height Improve text rendering */
