--- a/src/sass/global/_reset.scss
+++ b/src/sass/global/_reset.scss
@@ -20,7 +20,8 @@ picture {
 /* Allow percentage-based heights in the application */
 html,
 body {
-  height: 100%;
+  // height: 100%;
+  height: 100vh;
 }
 /* Typographic tweaks! Add accessible line-height Improve text rendering */
 body {
